--- a/ES6/main.html
+++ b/ES6/main.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset = "UTF-8">
 		<title> 모던 자바스크립트 </title>
-		<script src="./class/class_007.js"></script>
+		<script src="./class/class_009_super.js"></script>
 	</head>
 	<body>
 		<div id="clock"></div>
