ES6 class 문법 정리

--- a/ES6/main.html
+++ b/ES6/main.html
@@ -3,9 +3,11 @@
 	<head>
 		<meta charset = "UTF-8">
 		<title> 모던 자바스크립트 </title>
-		<script src="./class/class_009_super.js"></script>
+		<script src="./class/class_010_static.js"></script>
 	</head>
 	<body>
 		<div id="clock"></div>
 	</body>
 </html>
+
+<!--C:\Users\haniln\Desktop\dev\study\JavaScript_ES6_Study\ES6\main.html -->
